--- a/Onyx-Editor-NET/src/Onyx-Editor-NET/UI/MainWindow.xaml
+++ b/Onyx-Editor-NET/src/Onyx-Editor-NET/UI/MainWindow.xaml
@@ -9,8 +9,8 @@
         Title="MainWindow" Height="1050" Width="1920" Loaded="Window_Loaded"
         WindowStartupLocation="CenterScreen"
         >
-        
-    
+
+
     <Grid>
 
 
@@ -22,8 +22,18 @@
                     <MenuItem Header="_Save"/>
                 </MenuItem>
             </Menu>
-            <StackPanel Background="#FF474747"></StackPanel>
+            <StackPanel Background="#FF474747">
+
+                <Label Height="23" Content="Position" Margin="0,100,00,0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Width="120" Background="#FF02CCEC"/>
+                <TextBox x:Name="m_PositionTextboxY" TextAlignment="Center" Height="23" TextWrapping="Wrap" Margin="0,0,0,0" HorizontalAlignment="Left" Text="0.0" Width="120"/>
+                <TextBox x:Name="m_PositionTextboxX" TextAlignment="Center" Height="23" TextWrapping="Wrap" Margin="0,0,0,0" HorizontalAlignment="Left" Text="0.0" Width="120"/>
+                <TextBox x:Name="m_PositionTextboxZ" TextAlignment="Center" Height="23" TextWrapping="Wrap" Margin="0,0,0,0" HorizontalAlignment="Left" Text="0.0" Width="120"/>
+                <Button x:Name="m_CreateEntityButton" Click="m_CreateEntityButton_Click" Content="Create Entity" Width="120" HorizontalAlignment="Left" Height="20"/>
+
+
+            </StackPanel>
         </DockPanel>
+
 
 
         <Image x:Name="m_Viewport" HorizontalAlignment="Left" Height="540" Margin="480,62,0,0" VerticalAlignment="Top" Width="960"/>
