--- a/Onyx-Editor-NET/src/Onyx-Editor-NET/App.xaml
+++ b/Onyx-Editor-NET/src/Onyx-Editor-NET/App.xaml
@@ -2,8 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Onyx_Editor_NET"
-             StartupUri="src/Onyx-Editor-NET/UI/MainWindow.xaml">
+             StartupUri="pack://application:,,,/src/Onyx-Editor-NET/UI/MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="Button" x:Key="Round">
+            <Style.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="5" />
+                </Style>
+            </Style.Resources>
+        </Style>
     </Application.Resources>
 </Application>
