--- a/Onyx-Editor-NET/src/Onyx-Editor-NET/UI/MainWindow.xaml
+++ b/Onyx-Editor-NET/src/Onyx-Editor-NET/UI/MainWindow.xaml
@@ -6,37 +6,104 @@
         xmlns:local="clr-namespace:Onyx_Editor_NET"
         mc:Ignorable="d"
         Title="MainWindow" Height="1050" Width="1920"
-        WindowStartupLocation="CenterScreen" KeyDown="Window_KeyDown" Loaded="Window_Loaded" MouseMove="Window_MouseMove" KeyUp="Window_KeyUp" Closing="Window_Closing"
+        WindowStartupLocation="CenterScreen" KeyDown="Window_KeyDown" Loaded="Window_Loaded" MouseMove="Window_MouseMove" KeyUp="Window_KeyUp" Closing="Window_Closing" MouseDown="Window_MouseDown" MouseUp="Window_MouseUp"
         >
 
 
-    <Grid>
 
+    <Grid  Background="#FF474747">
 
-        <DockPanel>
-            <Menu DockPanel.Dock="Top">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="18" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="1000" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3.3*" />
+            <ColumnDefinition Width="1280" />
+            <ColumnDefinition Width="3.3*" />
+        </Grid.ColumnDefinitions>
+
+            <Menu DockPanel.Dock="Top"  Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0">
                 <MenuItem Header="_File">
                     <MenuItem Header="_Open"/>
                     <MenuItem Header="_Close" Click="MenuItem_Click"/>
                     <MenuItem Header="_Save"/>
                 </MenuItem>
             </Menu>
-            <StackPanel Background="#FF474747">
 
-                <Label Height="23" Content="Position" Margin="0,100,00,0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Width="120" Background="#FF0094FB"/>
-                <TextBox x:Name="PositionTextboxX" TextAlignment="Center" Height="23" TextWrapping="Wrap" Margin="0,0,0,0" HorizontalAlignment="Left" Text="0.0" Width="120"/>
-                <TextBox x:Name="PositionTextboxY" TextAlignment="Center" Height="23" TextWrapping="Wrap" Margin="0,0,0,0" HorizontalAlignment="Left" Text="0.0" Width="120"/>
-                <TextBox x:Name="PositionTextboxZ" TextAlignment="Center" Height="23" TextWrapping="Wrap" Margin="0,0,0,0" HorizontalAlignment="Left" Text="0.0" Width="120"/>
-                <Button x:Name="CreateEntityButton" Click="m_CreateEntityButton_Click" Content="Create Entity" Width="120" HorizontalAlignment="Left" Height="20"/>
+        <WrapPanel  Orientation="Horizontal" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center">
+            <Button Style="{DynamicResource Round}" Margin="5" Content="Transform" Width="65"/>
+            <Button Style="{DynamicResource Round}" Margin="5" Content="Rotate" Width="65"/>
+            <Button Style="{DynamicResource Round}" Margin="5" Content="Scale" Width="65"/>
+  
+        </WrapPanel>
+
+        <WrapPanel  Orientation="Horizontal" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center">
+            <Button Style="{DynamicResource Round}" Margin="5" Content="Play" Width="40"/>
+            <Button Style="{DynamicResource Round}" Margin="5" Content="Stop" Width="40"/>
+        </WrapPanel>
+
+        <StackPanel Background="#FF474747" Grid.Row="3" Grid.Column="0">
 
 
-            </StackPanel>
-        </DockPanel>
+
+           
+            <!-- LTRB-->
+            <TreeView Background="#FF474747" Margin="10,10,0,13" Name="TreeView1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="295" Height="487">
+                <TreeViewItem Foreground="#FFCDCDCD" Header="Cold Drinks">
+                    <TreeViewItem Foreground="#FFCDCDCD" Header="Coke">
+                        <TreeViewItem Foreground="#FFCDCDCD" Header="Pepsi"></TreeViewItem>
+                        <TreeViewItem Foreground="#FFCDCDCD" Header="Orange Juice"></TreeViewItem>
+                        <TreeViewItem Foreground="#FFCDCDCD" Header="Milk"></TreeViewItem>
+                        <TreeViewItem Foreground="#FFCDCDCD" Header="Iced Tea"></TreeViewItem>
+                        <TreeViewItem Foreground="#FFCDCDCD" Header="Mango Shake"></TreeViewItem>
+                    </TreeViewItem>
+                    <TreeViewItem Foreground="#FFCDCDCD" Header="Pepsi"></TreeViewItem>
+                    <TreeViewItem Foreground="#FFCDCDCD" Header="Orange Juice"></TreeViewItem>
+                    <TreeViewItem Foreground="#FFCDCDCD" Header="Milk">
+                        <TreeViewItem Foreground="#FFCDCDCD" Header="Pepsi"></TreeViewItem>
+                        <TreeViewItem Foreground="#FFCDCDCD" Header="Orange Juice"></TreeViewItem>
+                        <TreeViewItem Foreground="#FFCDCDCD" Header="Milk"></TreeViewItem>
+                        <TreeViewItem Foreground="#FFCDCDCD" Header="Iced Tea"></TreeViewItem>
+                        <TreeViewItem Foreground="#FFCDCDCD" Header="Mango Shake"></TreeViewItem>
+                    </TreeViewItem>
+                    <TreeViewItem Foreground="#FFCDCDCD" Header="Iced Tea"></TreeViewItem>
+                    <TreeViewItem Foreground="#FFCDCDCD" Header="Mango Shake"></TreeViewItem>
+                </TreeViewItem>
+            </TreeView>
+
+            <TreeView Background="#FF474747" Margin="10,10,0,13" Name="TreeView2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="295" Height="426">
+                <TreeViewItem Foreground="#FFCDCDCD" Header="Cold Drinks">
+                    <TreeViewItem Foreground="#FFCDCDCD" Header="Coke"></TreeViewItem>
+                    <TreeViewItem Foreground="#FFCDCDCD" Header="Pepsi"></TreeViewItem>
+                    <TreeViewItem Foreground="#FFCDCDCD" Header="Orange Juice"></TreeViewItem>
+                    <TreeViewItem Foreground="#FFCDCDCD" Header="Milk"></TreeViewItem>
+                    <TreeViewItem Foreground="#FFCDCDCD" Header="Iced Tea"></TreeViewItem>
+                    <TreeViewItem Foreground="#FFCDCDCD" Header="Mango Shake"></TreeViewItem>
+                </TreeViewItem>
+            </TreeView>
 
 
-        <Image x:Name="m_Viewport" HorizontalAlignment="Left" Height="540" Margin="480,62,0,0" VerticalAlignment="Top" Width="960"/>
+        </StackPanel>
 
-        <local:Viewport x:Name="ViewportMain" MouseDown="ViewportMain_MouseDown" HorizontalAlignment="Left" Height="540" Margin="480,100,0,0" VerticalAlignment="Top" Width="960" Background="#FF00992A"/>
+        <StackPanel Background="#FF474747" Grid.Row="3" Grid.Column="3">
 
+            <Label Height="23" Content="Position" Margin="0,0,00,0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Width="120" Background="#FF0094FB"/>
+            <TextBox x:Name="PositionTextboxX" TextAlignment="Center" Height="23" TextWrapping="Wrap" Margin="0,0,0,0" HorizontalAlignment="Left" Text="0.0" Width="120"/>
+            <TextBox x:Name="PositionTextboxY" TextAlignment="Center" Height="23" TextWrapping="Wrap" Margin="0,0,0,0" HorizontalAlignment="Left" Text="0.0" Width="120"/>
+            <TextBox x:Name="PositionTextboxZ" TextAlignment="Center" Height="23" TextWrapping="Wrap" Margin="0,0,0,0" HorizontalAlignment="Left" Text="0.0" Width="120"/>
+            <Button x:Name="CreateEntityButton" Click="m_CreateEntityButton_Click" Content="Create Entity" Width="120" HorizontalAlignment="Left" Height="20"/>
+
+
+        </StackPanel>
+
+
+
+        <local:Viewport Grid.Row="3" Grid.Column="1" x:Name="ViewportMain" MouseDown="ViewportMain_MouseDown" HorizontalAlignment="Left" Height="720" VerticalAlignment="Top" Width="1280" ClipToBounds="True" Background="#FF5F5F5F" MouseUp="ViewportMain_MouseUp"/>
+
+        
+        
     </Grid>
 </Window>
+    
