--- a/Onyx-Editor/src/OnyxEditor/UI/MainWindow.xaml
+++ b/Onyx-Editor/src/OnyxEditor/UI/MainWindow.xaml
@@ -8,19 +8,17 @@
         Title="MainWindow" Height="1050" Width="1920"
         WindowStartupLocation="CenterScreen" WindowState="Maximized" KeyDown="Window_KeyDown" Loaded="Window_Loaded" MouseMove="Window_MouseMove" KeyUp="Window_KeyUp" Closing="Window_Closing" MouseDown="Window_MouseDown" MouseUp="Window_MouseUp"
         >
-
-
-
+    
     <Grid  Background="#FF474747">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="18" />
-            <RowDefinition Height="30" />
+            <RowDefinition Height="9*" />
             <RowDefinition Height="1000" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="3.3*" />
-            <ColumnDefinition Width="1280" />
+            <ColumnDefinition Width="16*" />
             <ColumnDefinition Width="3.3*" />
         </Grid.ColumnDefinitions>
 
@@ -49,7 +47,7 @@
         <StackPanel Background="#FF474747" Grid.Row="3" Grid.Column="0">
 
             <!-- LTRB-->
-            <TreeView Background="#FF474747" Margin="10,10,0,13" Name="TreeView1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="295" Height="487">
+            <TreeView Background="#FF474747" Name="TreeView1" VerticalAlignment="Top" Margin="5" HorizontalAlignment="Stretch" Height="487">
                 <TreeViewItem Foreground="#FFCDCDCD" Header="Entities">
                     <TreeViewItem Foreground="#FFCDCDCD" Header="Coke">
                         <TreeViewItem Foreground="#FFCDCDCD" Header="Pepsi"></TreeViewItem>
