--- a/Onyx-Editor/src/OnyxEditor/UI/MainWindow.xaml
+++ b/Onyx-Editor/src/OnyxEditor/UI/MainWindow.xaml
@@ -54,7 +54,12 @@
 
         <StackPanel Grid.Row="2" Grid.Column="0" Grid.RowSpan="3" >
             <TreeView x:Name="SceneHierarchy" Height="500" Background="#FF333333">
-                <TreeViewItem Header="Employee1" IsSelected="False">
+                <TreeView.Resources>
+                    <Style TargetType="{x:Type TreeViewItem}">
+                        <Setter Property="Foreground" Value ="White"/>
+                    </Style>
+                </TreeView.Resources>
+                <TreeViewItem Header="Entity 1" IsSelected="False">
                     <TreeViewItem Header="Jesper Aaberg"/>
                     <TreeViewItem Header="Employee Number">
                         <TreeViewItem Header="12345"/>
@@ -65,7 +70,7 @@
                         <TreeViewItem Header="Thursday"/>
                     </TreeViewItem>
                 </TreeViewItem>
-                <TreeViewItem Header="Employee1" IsSelected="False">
+                <TreeViewItem Header="Entity 2" IsSelected="False">
                     <TreeViewItem Header="Jesper Aaberg"/>
                     <TreeViewItem Header="Employee Number">
                         <TreeViewItem Header="12345"/>
@@ -76,12 +81,24 @@
                         <TreeViewItem Header="Thursday"/>
                     </TreeViewItem>
                 </TreeViewItem>
+                <TreeViewItem Header="Entity 3" IsSelected="False">
+                    <TreeViewItem Header="Jesper Aaberg"/>
+                    <TreeViewItem Header="Employee Number">
+                        <TreeViewItem Header="12345"/>
+                    </TreeViewItem>
+                    <TreeViewItem Header="Work Days">
+                        <TreeViewItem Header="Monday"/>
+                        <TreeViewItem Header="Tuesday"/>
+                        <TreeViewItem Header="Thursday"/>
+                    </TreeViewItem>
+                </TreeViewItem>
+                
             </TreeView>
 
             <!--Source="pack://application:,,,/res/images/icons/folder.png"/>-->
             <TreeView x:Name="AssetBrowser" Height="500" Background="#FF333333">
                 <TreeView.Resources>
-                    <local:AssetTagToIconPathConverter x:Key="CuntCake" />
+                    <local:AssetTagToIconPathConverter x:Key="AssetTagToIconPathConvertor" />
                     <Style TargetType="{x:Type TreeViewItem}">
                         <Setter Property="HeaderTemplate">
                             <Setter.Value>
@@ -95,7 +112,7 @@
                                             Mode=FindAncestor,
                                             AncestorType={x:Type TreeViewItem}},
                                             Path=Tag,
-                                            Converter={StaticResource CuntCake}}"/>           
+                                            Converter={StaticResource AssetTagToIconPathConvertor}}"/>           
                                         <TextBlock Text="{Binding}"
                                          Margin="5,0" />
                                     </StackPanel>
